# googlescholarscraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  convert.py  convert_to_bibtex.py  pyproject.toml  requirements.txt  scrapy.cfg
googlescholar/: items.py  middlewares.py  pipelines.py  settings.py
googlescholar/spiders/: googlescholar_spider.py
