[tool.poetry]
name = "googlescholarscraper"
version = "0.1.0"
description = "A scraper for Google Scholar, written in Python"
authors = ["Carmine Paolino <carmine@paolino.me>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
bibtexparser = "^1.3.0"
click = "^8.1.3"
python-dotenv = "^0.21.0"
Scrapy = "^2.6.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
